--- a/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
+++ b/docs/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
@@ -44,7 +44,7 @@ NVIDIA 平台支持两种 Camera 驱动架构：
 - 创建设备树 Overlay 文件,路径示例如下:
   
   ```shell
-  Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/overlay/tegra234-p3767-camera-p3768-ov5647.dts`
+  Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/overlay/tegra234-p3767-camera-p3768-ov5647.dts
   ```
 
 - tegra-camera-platform 节点配置,配置视频流端口及连接关系，示例：
