Update English documentation

--- a/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/3-ov5647.md
@@ -1,51 +1,53 @@
-# OV5647
+# OV5647 Camera Module Adaptation Guide
 
-This document mainly introduces the development and adaptation process of the camera, taking OV5647 as an example.
+This guide uses the OV5647 camera module as an example to detail the development and adaptation process on the NG4520 platform, covering hardware preparation, device tree configuration, driver compilation, system loading, and debugging steps.
 
-## Camera Architecture Overview
+## Terms and Explanations
 
-### Common Terms
+| Terms                | Explanations                             |
+| ------------------- | ------------------------------ |
+| ISP                 | Converts raw sensor data into usable images, handling demosaicing, noise reduction, exposure, focus, and white balance.  |
+| Bayer               | Bayer sensors uses alternating red, green, and blue filters over photosites, with green taking half, to capture color images.   |
+| CSI                 | High-speed serial interface for transferring image data between sensors and processors.   |
+| V4L2                | Linux kernel driver interface for video capture and output devices.        |
+| libargus            | NVIDIA API for acquiring camera images and metadata. |
+| Camera Core Library | Provides controls and processing between user applications and V4L2 drivers.|
+| GStreamer           | Multimedia framework supporting playback and advanced audio/video processing. |
+| Host1x              | Tegra DMA engine managing graphics/multimedia register access and sync via client FIFOs.    |
+| Aperture            | Controls the size of the lens opening.   |
+| UVC                 | USB video devices with standard streaming functions that connect directly to hosts. |
+| VI                  | Transfers video data from an input device. |
 
-| Term                | Explanation                                                                                          |
-| ------------------- | ---------------------------------------------------------------------------------------------------- |
-| ISP                 | Image Signal Processor, used for image denoising, white balance, color correction, etc.              |
-| Bayer               | Camera sensor that captures images using a Bayer filter array.                                       |
-| CSI                 | Camera Serial Interface, used for data transmission between the camera and the processor.            |
-| V4L2                | Linux kernel framework for video capture and output.                                                 |
-| libargus            | NVIDIA's advanced camera control library.                                                            |
-| Camera Core Library | Provides control and processing functions between application programs and kernel-mode V4L2 drivers. |
-| GStreamer           | Open-source multimedia processing framework for audio and video processing.                          |
-| Host1x              | Host interface controller in NVIDIA Tegra SoC.                                                       |
-| Aperture            | Aperture control for adjusting the lens aperture size.                                               |
-| UVC                 | USB Video Class, used for USB camera drivers.                                                        |
-| VI                  | Video Input module for receiving and processing video data.                                          |
+**Software Driver Architecture**
 
-### Camera SW Architecture
+The NVIDIA platform supports two types of camera driver architectures：
 
-    NVIDIA platform provides two camera driver architectures: **Camera Core Library Interface** and **Direct V4L2 Interface**. The main difference is that the former provides access to the ISP on the Jetson platform and advanced image processing functions, and exports related interfaces for libargus usage in the application space. Libargus provides simplified APIs for accessing camera functions and ISP on the Jetson platform. The nvgstcapture-1.0 tool used later is also based on this library.
-Since we need to use NVIDIA-related ISP functions later, we will develop and adapt the Camera Core Library Interface framework.
+- **Camera Core Library Interface**： Enables access to the ISP and advanced image processing. Applications interact through the libargus API (e.g., the nvgstcapture-1.0 tool).
+- **Direct V4L2 Interface**：Directly uses the V4L2 driver without the NVIDIA ISP.
 
-## OV5647 Driver Adaptation Process
+**It is recommended to use the Camera Core Library Interface to fully leverage the capabilities of the NVIDIA ISP.**
+
+## OV5647 Driver Configuration Process
 
 ### Prerequisites
 
-- Obtain the camera I2C address, confirm the wiring sequence, power and reset pins.
+- To find the I2C address and pinout of a camera module，verify the Power-Down (PWDN) and RESET pins.
 
-- Obtain the camera power-on sequence, clock, supported resolutions, frame rates, and camera filter array (BGGR, GBRG, GRBG, RGGB).
+- Obtain the device’s power-up sequence, external clock parameters, supported resolutions and frame rates, and the color filter array type（BGGR/GBRG/GRBG/RGGB）.
 
-- Confirm the camera connection interface, corresponding to the appropriate `tegra_sinterface`, such as cam1 corresponding to serial_a and cam0 corresponding to serial_c on Jetson Orin NX.
+- Confirm the connection interface and the corresponding ` tegra_sinterface ` mapping (for example, on the NG452X platform, cam0 = serial_c).
 
-**This adaptation is based on the Jetson Orin NX platform, and the hardware connection interface is cam0.**
+> **This example is based on Jetson Orin NX, with cam0 as the hardware connection interface.**
 
-### Device Tree Configuration
+### To add camera modules to a device tree
 
-- The DTB of OV5647 is loaded using the overlay method, so create a DTS file in the kernel source code, the path is as follows:
+- Locate or create a tegra-camera-platform device tree node in the kernel source tree at:
   
   ```shell
   Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/overlay/tegra234-p3767-camera-p3768-ov5647.dts`
   ```
 
-- Create the `tegra-camera-platform` device tree node
+- Configure the ` tegra-camera-platform ` node, including video stream ports and connection relationships. For example：
   
   ```nand2tetris-hdl
   tegra-capture-vi  {
@@ -65,7 +67,9 @@ Since we need to use NVIDIA-related ISP functions later, we will develop and ada
   };
   ```
 
-- Create `rbpcv2_ov5647_c@36` device under the I2C node and fill in the I2C device address, mode clock, resolution, frame rate, etc. according to the datasheet
+- I2C Device Node Configuration
+  
+  Configure camera parameters (I2C address, modes, clock, resolution, etc.)：
   
   ```nand2tetris-hdl
   rbpcv2_ov5647_c@36 {
@@ -146,11 +150,9 @@ Since we need to use NVIDIA-related ISP functions later, we will develop and ada
   };
   ```
 
-- Port binding configuration to ensure the video stream connection relationship.
+- Port Binding Configuration
   
-  - The video data stream is generated from the OV5647 camera device, then transmitted to the CSI module for receiving, decoding, deserializing, and preliminary processing of video data. It is then transmitted to the VI module for further processing and formatting of video data, and finally transmitted to system memory or other processing units.
-  
-  - Connect the three modules through `remote-endpoint`.
+  - Use`remote-endpoint` to connect the camera, CSI, and VI modules, ensuring a complete video stream pipeline.
     
     ```nand2tetris-hdl
     tegra-capture-vi  {
@@ -199,83 +201,74 @@ Since we need to use NVIDIA-related ISP functions later, we will develop and ada
     };
     ```
 
-- Configure Makefile, `/home/xuys8233/work/Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/overlay/Makefile`, add the following information:
+- Overlay Makefile Configuration，add the following in `overlay/Makefile`：
   
   ```
   dtbo-y += tegra234-p3767-camera-p3768-ov5647.dtbo
   ```
 
-- Compile to generate dtbo
+- Build the  dtbo：
   
   ```
   make dtbs
   ```
 
-### Driver Configuration
+### Building Driver
 
-- Add the driver file `/home/xuys8233/work/Linux_for_Tegra/source/nvidia-oot/drivers/media/i2c/ov5647.c`. This driver file can be modified based on `nv_ov5693.c`. The core points are as follows:
-
-- Register the camera driver through the NVIDIA provided `tegracam_device_register` function. The following three structures need to be filled:
+- Add Driver Source Code
   
-  - `tc_dev->sensor_ops`, this structure contains the sensor-related operation functions, such as power on, power off, read and write registers, set mode, start and stop streaming, etc. These functions will be called when using NVIDIA's libargus API. Here is an example of this structure:
-    
-    ```c
-    static struct tegracam_sensor_ops ov5647_sensor_ops = {
-        .power_on = ov5647_power_on,
-        .power_off = ov5647_power_off,
-        .write_reg = ov5647_write_reg,
-        .read_reg = ov5647_read_reg,
-        .set_mode = ov5647_set_mode,
-        .start_streaming = ov5647_start_streaming,
-        .stop_streaming = ov5647_stop_streaming,
-        .sensor_init = ov5647_sensor_init,
-    };
-    ```
-    
-    The specific implementation of these functions needs to be written according to the OV5647 datasheet and related documents.
+  - Example pat：`drivers/media/i2c/ov5647.c`
+  - It is recommended to modify it based on `nv_ov5693.c` 
+  - Main functions include：
+    - Use`tegracam_device_register` to register the driver
+    - Set up these key function structures：
+      - `tc_dev->sensor_ops`(power on/off, register read/write, mode setting, stream control, etc.)
+      - `tc_dev->v4l2sd_internal_ops`（e.g., open/s_stream）
+      - `tc_dev->tcctrl_ops`（gain, exposure, frame rate control, etc.）
   
-  - `tc_dev->v4l2sd_internal_ops`, this structure mainly implements the `open` function. If you need to use `v4l2-ctl` related tools in user space, you need to add `.s_stream = ov5647_s_stream` related function. Here is an example:
+  ```
+  static struct tegracam_sensor_ops ov5647_sensor_ops = {
+      .power_on = ov5647_power_on,
+      .power_off = ov5647_power_off,
+      .write_reg = ov5647_write_reg,
+      .read_reg = ov5647_read_reg,
+      .set_mode = ov5647_set_mode,
+      .start_streaming = ov5647_start_streaming,
+      .stop_streaming = ov5647_stop_streaming,
+      .sensor_init = ov5647_sensor_init,
+  };
+  ```
+  
+ The implementation of these functions should follow the OV5647 datasheet and related documentation
+  
+  - Add Register Table Header File
+    
+    - Example path：`drivers/media/i2c/ov5647_modes_tbls.h`
+    - This should include register configuration tables for various resolutions and exposure settings, and keep the same order as defined in the device tree modes.
     
     ```c
     static struct v4l2_subdev_internal_ops ov5647_subdev_internal_ops = {
         .open = ov5647_open,
     };
     ```
-  
-  - `tc_dev->tcctrl_ops`, this structure contains the camera control operation functions, such as setting gain, exposure, frame rate, etc. Here is an example:
-    
-    ```c
-    static struct tegracam_ctrl_ops ov5647_ctrl_ops = {
-        .numctrls = ARRAY_SIZE(ctrl_cid_list),
-        .ctrl_cid_list = ctrl_cid_list,
-        .set_gain = ov5647_set_gain,
-        .set_exposure = ov5647_set_exposure,
-        .set_frame_rate = ov5647_set_frame_rate,
-        .set_group_hold = ov5647_set_group_hold,
-    };
-    ```
 
-- Add the header file `/home/xuys8233/work/Linux_for_Tegra/source/nvidia-oot/drivers/media/i2c/ov5647_modes_tbls.h`, which mainly contains the register tables for sensor resolution, exposure time, etc. Here is an example:
+- Driver Makefile Configuration，add the following line to to `drivers/media/i2c/Makefile` to include the OV5647 driver：
   
-  - This table will be registered by the `tc_dev->sensor_ops` structure.
-  
-  - Then configure the register table for each resolution, such as `start_stream`. Subsequent functions like `set_mode`, `set_gain`, etc., will call the register configuration in this table for writing. (**Note: The order of each resolution needs to be consistent with the mode order in the device tree**)
-
-- Configure Makefile, modify `/home/xuys8233/work/Linux_for_Tegra/source/nvidia-oot/drivers/media/i2c/Makefile`
-  
-  ```shell
+  ```
   obj-m += ov5647.o
   ```
 
-- Compile the module to generate `ov5647.ko`
+- Compile the kernel module：
   
   ```shell
   make modules
   ```
 
-### System Adaptation
+### Driver Installation and Loading
 
-- Start the device, copy the compiled dtbo and `ov5647.ko` to the AIBOX via scp.
+**Copy Files**
+
+- Copy the generated `.dtbo` and `ov5647.ko` to the target device (for example, NG4520):
 
 ```
 cd Linux_for_Tegra/source
@@ -284,7 +277,9 @@ scp ./kernel-devicetree/generic-dts/dtbs/tegra234-p3767-camera-p3768-ov5647.dtbo
 scp ./kernel-devicetree/generic-dts/dtbs/tegra234-p3767-camera-p3768-ov5647.dtbo milesight@192.168.60.3:/home/milesight
 ```
 
-- Copy `ov5647.ko` to the modules directory and execute `depmod` to load the driver.
+**Driver Installation**
+
+- Copyov5647.ko to the modules directory and run ` depmod ` to load the driver:
 
 ```
 sudo cp ./ov5647.ko  /usr/lib/modules/5.15.148-tegra/updates/drivers/media/i2c/
@@ -292,32 +287,46 @@ sudo cp ./ov5647.ko  /usr/lib/modules/5.15.148-tegra/updates/drivers/media/i2c/
 depmod
 ```
 
-- Copy the dtbo to the /boot directory and start the dtbo using `config-by-hardware.py`, as shown below.
+- Copy`.dtbo` to `/boot`，and load it using the `config-by-hardware.py` 
 
-- After completing, restart the development board.
+- After completing these steps, reboot the development board.
 
-### Debugging Ideas
+## Verification Process
 
-- Confirm if the dtbo is loaded successfully
-  
-  - Execute `cat /boot/extlinux/extlinux.conf` to confirm if the dtbo is loaded.
-  - Execute `cat /proc/device-tree/tegra-camera-platform/modules/module1/drivernode0/sysfs-device-tree` to confirm if the dtbo is effective. (The dtbo may be configured in extlinux.conf but not necessarily used. Errors in the dtbo may prevent it from taking effect, and such errors will not be displayed, so this step is necessary.)
+1. **Check the Device Tree Load**
+   
+   - Check if`extlinux.conf` has loaded the `.dtbo`：
+     
+     `cat /boot/extlinux/extlinux.conf`
+   
+   - Verify whether the device tree node is effective：
+     
+     `cat /proc/device-tree/tegra-camera-platform/modules/module1/drivernode0/sysfs-device-tree`
 
-- Confirm if the driver is loaded successfully
-  
-  - Execute `lsmod | grep ov5647` to confirm if the ov5647 driver is present.
-  - Execute `sudo dmesg | grep ov5647` to check for errors during driver loading.
-  - Use `sudo i2cdetect -y -r 9` to confirm if the device matches successfully.
+2. **Check the Driver Load**
+   
+   - Check the driver module using the following command：
+     
+     `lsmod | grep ov5647 sudo dmesg | grep ov5647`
+   
+   - Check I2C device matching using the following command：
+     
+     `sudo i2cdetect -y -r 9`
 
-- After confirming no issues, run `nvgstcapture-1.0` to call the sensor.
-  
-  - Confirm if the listed resolutions match the modes in the device tree.
-  - Check for other error messages. If `nvbuf_utils` appears, check for error messages in dmesg.
-
-- Use `sudo media-ctl -p -d /dev/media0` to check for issues in the video stream link.
+3. **Camera Function Test**
+   
+   - Run `nvgstcapture-1.0`，to verify resolution and mode matching, and ensure there are no errors.
+   
+   - Check the video stream pipeline using the following command：
+     
+     `sudo media-ctl -p -d /dev/media0`
 
 ## References
 
 [Sensor Software Driver Programming](https://docs.nvidia.com/jetson/archives/r36.3/DeveloperGuide/SD/CameraDevelopment/SensorSoftwareDriverProgramming.html)
 
 [ov5647_driver/ov5647.c at main · mkm684/ov5647_driver](https://github.com/mkm684/ov5647_driver/blob/main/ov5647.c)
+
+---
+
+For adapting to other camera models, Please refer to the original vendor datasheet and the NVIDIA official documentation, as the steps are generally similar.
