--- a/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/4-ALC5640.md
@@ -1,63 +1,51 @@
-# ALC5640
+# Audio Adaptation Guide (ALC5640 Example)
 
-This document primarily introduces the development and adaptation process for audio, using the ALC5640 as an example. The Realtek ALC5640 is a low-power, high-performance audio codec widely used in various embedded systems. This guide aims to help users successfully adapt and use the ALC5640 audio codec on the Jetson Orin Nano platform.
+This guide uses the Realtek ALC5640 audio codec as an example describe the driver adaptation, device tree configuration, kernel configuration, system integration, and common testing methods on the NG4500-CB01 platform.
 
-## Audio Architecture Overview
+## Terms and Explanations
 
-### Common Terms
+| Terms | Explanations                                                                |
+| ------ | ------------------------------------------------------------------------- |
+| I2S    | Serial interface for digital audio transmission between ICs, commonly used to connect external audio devices.                                            |
+| DSPK   | Digital speaker interface for connecting and controlling digital speakers; supports digital speaker output.                                             |
+| DMIC   | Digital microphone controller for managing and processing digital microphone input，supports various digital mic types.                                          |
+| Mixer  | Mixer module that combines multiple audio input signals into a single output.                                                   |
+| AMX    | Audio multiplexer that merges multiple audio signals into a single output channel.                                        |
+| ADX    | Audio demultiplexer that splits a single audio signal into multiple independent channels.                                               |
+| SFC    | Sample rate converter for transforming audio signals between different sampling rates to improve system compatibility.                                              |
+| MVC    | Master volume controller for unified adjustment of audio channel output volume.                                                      |
+| ADMA   | Audio-specific Direct Memory Access controller for efficient audio data transfer, supporting up to 32 audio channels.                                          |
+| ADMAIF | AHUB DMA interface enabling data exchange between audio hardware modules and system memory; supports 20 TX/RX channels, optimized for Jetson. |
+| XBAR   | Audio crossbar (router) for dynamically routing audio signals between multiple sources and destinations; the core of audio path configuration.               |
+| APE    | Dedicated audio processing engine on the Jetson platform, featuring low power consumption and high performance for tasks like audio decoding.                        |
+| AHUB   | Core component of APE that integrates multiple NVIDIA proprietary hardware modules for audio routing, processing, and inter-module communication.                         |
 
-| Module | Component                                                                                                                                                                                        |
-| ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| I2S    | I2S interface for transmitting digital audio data, used to connect external audio devices                                                                                                        |
-| DSPK   | Digital speaker interface for connecting and controlling digital speakers                                                                                                                        |
-| DMIC   | Digital microphone controller for managing and processing digital microphone input                                                                                                               |
-| Mixer  | Mixer for combining multiple audio signals into one output signal                                                                                                                                |
-| AMX    | Audio multiplexer for multiplexing multiple audio signals into one output channel                                                                                                                |
-| ADX    | Audio demultiplexer for separating one audio signal into multiple channels                                                                                                                       |
-| SFC    | Sample rate converter for converting audio signals to different sample rates                                                                                                                     |
-| MVC    | Master volume controller for adjusting the master volume of audio signals                                                                                                                        |
-| ADMA   | Audio direct memory access for efficient audio data transmission, supporting 32 channels                                                                                                         |
-| ADMAIF | AHUB DMA interface for data transfer between audio hardware units and memory, supporting 20 TX/RX channels, designed for Jetson, supporting multi-channel audio data transfer                    |
-| XBAR   | Crossbar (audio routing) for dynamically routing audio data between multiple audio sources and destinations, the core module for audio data routing, supporting dynamic audio path configuration |
-| APE    | Independent hardware module in NVIDIA Jetson devices dedicated to audio processing, featuring low power consumption and high performance                                                         |
-| AHUB   | Core component of APE responsible for audio data routing and processing, containing multiple NVIDIA-specific hardware modules                                                                    |
+ **Software Driver Architecture**
 
-### Audio SW 架构
-
-On the NVIDIA Jetson platform, the driver adaptation for the ALC5640 audio codec is primarily based on the **ALSA ASoC (Audio System on Chip)** framework. ASoC is the standard audio subsystem of the Linux kernel for managing embedded audio hardware, including codecs, platform DMA, and digital audio interfaces (DAI).
-The ASoC driver architecture mainly consists of three core components:
-
-1. **Codec Driver** - Manages the ALC5640 register configuration and audio paths.
-2. **Platform Driver** - Handles Tegra DMA and I2S interfaces. 
-3. **Machine Driver** - Binds hardware and defines audio routing.
-
-There are some NVIDIA-specific features, such as:
-
-1. **Audio Processing Engine (APE)**, a dedicated hardware module for independent audio tasks. 
-
-2. **Audio Hub (AHUB)**, which includes the following two core components: 
-   
-   **XBAR**: The core of dynamic audio routing, supporting real-time path switching, equivalent to a switch.
-   
-   **ADMAIF**: A dedicated 32-channel DMA engine.
+- **ALSA ASoC**（Audio System on Chip） is the mainline Linux audio subsystem，provide better ALSA support for embedded system on chip procesors.。
+- ASoC system architecture consists of three core driver components：
+  1. **Codec Driver**：Manages ALC5640 registers and audio signal paths
+  2. **Platform Driver**：Handles Tegra DMA and I2S interface operations
+  3. **Machine Driver**：Binds hardware components and defines audio routing
+- The NVIDIA Jetson platform integrates a proprietary audio architecture featuring the APE engine and AHUB module, supporting XBAR dynamic routing and multi-channel DMA via ADMAIF.
 
 ![](/img/NG45XX_SOFTWARE/Driver/EG45XX_Audio_Framework.png)
 
-## ALC5640 Driver Adaptation Process
+## ALC5640 Driver Configuration Process
 
 ### Prerequisites
 
 - Confirm the I2C address of the ALC5640 codec chip.
 
-- Obtain the ALC5640 mode (master/slave mode) and clock information (e.g., MCLK/BCLK/LRCK) from the datasheet.
+- Refer to the datasheet to determine the ALC5640 operating mode (Master/Slave) and required clock signals (e.g., MCLK, BCLK, LRCK).
 
 ![](/img/NG45XX_SOFTWARE/Driver/EG45XX_ALC5640_CLK.png)
 
 ### Device Tree Configuration
 
-In the device tree file `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/nv-platform/tegra234-NG45XX-p3768-0000+p3767-0000-common.dts`, complete the following configurations:
+Locate or create the device tree file in `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/nv-platform/tegra234-NG45XX-p3768-0000+p3767-0000-common.dts`， configure the following:
 
-- I2C node configuration: Add codec chip configuration as shown below:
+- **I2C Node – Add Codec Configuration as shown below**：
   
   ```c
   i2c@3160000 {
@@ -89,7 +77,7 @@ In the device tree file `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/n
   };
   ```
 
-- I2S node configuration: Enable ahub, I2S controller, and connect to the `rt5640_ep codec` chip as shown below:
+- **I2S Node**，Enable AHUB, I2S Controller, and Connect Codec to `r&t5640_ep codec`chip as shown below：
   
   ```shell
   aconnect@2900000 {
@@ -111,7 +99,7 @@ In the device tree file `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/n
   };
   ```
 
-- Sound card node definition and routing configuration as shown below:
+- **Sound card node definition and routing configuration** as shown below ：
   
   ```shell
   sound {
@@ -142,7 +130,7 @@ In the device tree file `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/n
   };
   ```
 
-- DAI link configuration, linking the CPU ADMA intermediate xbar to the codec alc5640.
+- **DAI Link** , linking the CPU ADMA intermediate xbar to the codec alc5640
   
   ```shell
   nvidia-audio-card,dai-link@79 {
@@ -157,15 +145,15 @@ In the device tree file `Linux_for_Tegra/source/hardware/nvidia/t23x/nv-public/n
 
 ### Kernel Configuration
 
-In `Linux_for_Tegra/source/kernel/kernel-jammy-src/arch/arm64/configs/defconfig`, add the following configuration:
+Edit the following file`Linux_for_Tegra/source/kernel/kernel-jammy-src/arch/arm64/configs/defconfig` add the following commands.
 
 ```shell
 CONFIG_SND_SOC_ALC5640=m
 ```
 
-### System Adaptation
+### System Integration & Driver Loading
 
-- Start the device and copy the compiled dtb and snd-soc-rt5640.ko to the AIBOX using scp.
+- Boot the target device (AIBOX)，Transfer the compiled DTB and kernel module via `scp`from your host machine
 
 ```
 cd Linux_for_Tegra/source
@@ -174,7 +162,7 @@ scp ./kernel-devicetree/generic-dts/dtbs/tegra234-NG45XX-p3768-0000+p3767-0003-n
 scp ./kernel/kernel-jammy-src/sound/soc/codecs/snd-soc-rt5640.ko milesight@192.168.60.3:/home/milesight
 ```
 
-- Copy snd-soc-rt5640.ko to the modules directory and execute depmod to load the driver.
+- copy the` snd-soc-rt5640.ko` to the kernel module path and run  ` depmod `  to load driver.
 
 ```
 sudo cp ./snd-soc-rt5640.ko /lib/modules/5.15.148-tegra/kernel/sound/soc/codecs/snd-soc-rt5640.ko
@@ -182,11 +170,11 @@ sudo cp ./snd-soc-rt5640.ko /lib/modules/5.15.148-tegra/kernel/sound/soc/codecs/
 sudo depmod
 ```
 
-- After completion, restart the development board.
+- Finally, reboot the device to apply the configuration.
 
-### Testing and Verification
+### Debugging
 
-- Headphone Speaker
+- **Headphone / Internal Speaker Playback Test**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -202,11 +190,11 @@ amixer -c APE cset name="CVB-RT HP R Playback Switch"  "on"
 amixer -c APE cset name="CVB-RT HP Playback Volume"  "31,31"
 amixer -c APE cset name="CVB-RT DAC1 Playback Volume"  "175,175" 
 
-# Test
-aplay  xx.wav
+#Testing
+aplay  xxx.wav
 ```
 
-- Headphone Microphone
+- **Headset Microphone Recording Test**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -218,12 +206,12 @@ amixer -c APE cset name="CVB-RT Stereo ADC MIXL ADC1 Switch" "on"
 amixer -c APE cset name="CVB-RT Stereo ADC MIXR ADC1 Switch" "on"
 amixer -c APE cset name='CVB-RT ADC Capture Switch' on
 
-# Test, record and play
+#Record and playback
 arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 xxx.wav
 aplay  xxx.wav
 ```
 
-- External Speaker
+- **External Speaker Playback Test**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -245,11 +233,11 @@ amixer -c APE cset name="CVB-RT SPOR MIX SPKVOL R Switch" on
 amixer -c APE cset name="CVB-RT OUT MIXL SPK MIXL Switch" on
 amixer -c APE cset name="CVB-RT OUT MIXR SPK MIXR Switch" on
 
-# Test
-aplay  aaa.wav
+#Testing
+aplay  xxx.wav
 ```
 
-- External Microphone
+- **External Microphone Recording Test**
 
 ```shell
 amixer -c APE cset name="I2S4 Mux" "ADMAIF1"
@@ -262,25 +250,29 @@ amixer -c APE cset name="CVB-RT RECMIXL BST3 Switch" "on"
 amixer -c APE cset name="CVB-RT RECMIXR BST3 Switch" "on"
 amixer -c APE cset name='CVB-RT ADC Capture Switch' on
 
-# Test, record and play
-arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 aaa.wav
-aplay  aaa.wav
+#Testing: Recording and Playback
+arecord -Dhw:APE,1 -c 2 -r 44100 -f S16_LE -d 5 xxx.wav
+aplay  xxx.wav
 ```
 
 ## Troubleshooting
 
-- No sound output
+- No audio output
   
-  - Confirm MCLK/BCLK are normal.
+  - Verify MCLK/BCLK are present and stable
   
-  - Confirm I2S.
+  - Check the I2S interface 
   
-  - Check amixer routing configuration.
+  - Check the amixer routing settings 
 
-- High noise in recording
+- Recording noise
   
-  - Check the sample rate.
+  - Ensure correct sampling rate
 
 ## References
 
 [Audio Setup and Development — NVIDIA Jetson Linux Developer Guide](https://docs.nvidia.com/jetson/archives/r36.4.3/DeveloperGuide/SD/Communications/AudioSetupAndDevelopment.html#)
+
+---
+
+For  adapting other audio codecs, the procedure is largely similar. Key focus should be on driver support and device tree configuration.
