--- a/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/3-Software Frameworks and Tools/2-n8n.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/3-Software Frameworks and Tools/2-n8n.md
@@ -1,147 +1,145 @@
-# n8n  
+# n8n
 
----  
 
-This guide explains how to install, configure, and use **n8n** on NVIDIA **Jetson Orin** devices. n8n is a powerful and extensible workflow automation tool with hundreds of built-in integrations. Thanks to its Docker support and low system requirements, it runs smoothly on Jetson hardware.  
 
----  
+This guide demonstrates how to install, configure, and use **n8n** on **NVIDIA Jetson Orin** devices. n8n is a powerful and extensible workflow automation tool that supports hundreds of built-in integrations. With minimal resource demands and full Docker support, it runs efficiently on Jetson devices.
 
-## 1. Overview  
+
+
+## 1. Overview
 
 - Visual low-code workflow builder  
 - Supports 300+ integrations (APIs, webhooks, databases, etc.)  
-- Docker-compatible for quick deployment  
-- Local-first automation (privacy-focused)  
-- Full ARM64 architecture support (Jetson)  
+- Docker-compatible for fast deployment  
+- Local-first automation with privacy focus  
+- Full ARM64 architecture support (Jetson)
 
-This guide covers:  
+This guide covers：
 
 - Docker-based installation  
 - Persistent configuration  
 - Service management  
-- Remote access configuration  
-- Uninstallation and troubleshooting  
+- Remote access setup  
+- Uninstallation and troubleshooting
 
-![overview](/img/NG45XX_n8n_overview.png)  
+![overview](/img/NG45XX_n8n_overview.png)
 
----  
+---
 
-## 2. System Requirements  
+## 2. Requirements
 
-### Hardware Requirements  
+### Hardware
 
-| Component | Minimum Requirement               |  
-| --------- | --------------------------------- |  
-| Device    | Jetson Orin Nano / NX / AGX       |  
-| RAM       | ≥ 4GB (8GB recommended)           |  
-| Storage   | ≥ 2GB free space                  |  
+| Component | Minimum Requirement |
+|------|----------|
+| Device  | Jetson Orin Nano / NX  |
+| Memory  | ≥ 4GB (8GB recommended)           |
+| Storage  | ≥ 2GB available space |
 
-### Software Requirements  
+###  Software
 
-- Ubuntu 20.04 or 22.04 (JetPack-based)  
+- Ubuntu 20.04 / 22.04 (Jetson)
 - Docker & Docker Compose  
-- Node.js (optional, for running from source)  
+- Node.js（optional，for source-based deployment）
 
----  
+---
 
-## 3. Installing n8n  
+## 3. Installation 
 
-### Method A: Using [npx](https://docs.n8n.io/hosting/installation/npm/) (requires [Node.js](https://nodejs.org/en/download)):  
+### Method A: Using  [npx](https://docs.n8n.io/hosting/installation/npm/) (requires [Node.js](https://nodejs.org/en/download)):
 
-```bash  
-# Download and install fnm:  
-curl -o- https://fnm.vercel.app/install | bash  
+```bsh
+# Download and install fnm:
+curl -o- https://fnm.vercel.app/install | bash
 
-# Download and install Node.js:  
-fnm install 22  
+# Download and install Node.js:
+fnm install 22
 
-# Verify the Node.js version:  
-node -v # Should print "v22.14.0".  
+# Verify the Node.js version:
+node -v # Should print "v22.14.0".
 
-# Verify npm version:  
-npm -v # Should print "10.9.2".  
-```  
+# Verify npm version:
+npm -v # Should print "10.9.2".
+```
 
-```bash  
-mkdir -p ~/.n8n  
-sudo chown -R $USER:$USER ~/.n8n  
-npx n8n  
-```  
+```bash
+mkdir -p ~/.n8n
+sudo chown -R $USER:$USER ~/.n8n
+npx n8n
+```
 
-> ✅ The official image supports ARM64 and runs directly on Jetson.  
+> ✅ The official image supports ARM64, so it runs natively on Jetson devices.
 
-### Method B: Using [Docker](https://docs.n8n.io/hosting/installation/docker/):  
+### Method B: Using [Docker](https://docs.n8n.io/hosting/installation/docker/) :
 
-```bash  
-docker volume create n8n_data  
-docker run -it --rm --name n8n -p 5678:5678 -e N8N_SECURE_COOKIE=false -v n8n_data:/home/node/.n8n docker.n8n.io/n8nio/n8n  
-```  
+```bash
+docker volume create n8n_data
+docker run -it --rm --name n8n -p 5678:5678 -e N8N_SECURE_COOKIE=false -v n8n_data:/home/node/.n8n docker.n8n.io/n8nio/n8n
+```
+---
 
----  
+## 4. Accessing the Web Interface
 
-## 4. Accessing the Interface  
+Once n8n is running, open your browser and visit:
 
-Once n8n is running, access it via a browser at:  
+```
+http://<Jetson-IP>:5678
+```
+![login](/img/n8n_login.png)
 
-```  
-http://<Jetson-IP>:5678  
-```  
+## 5. Common Commands
 
-![login](/img/n8n_login.png)  
+| Operation     | Command                     |
+| ------ | ------------------------ |
+| Start n8n | `docker compose up -d`   |
+| View logs   | `docker logs n8n`        |
+| Stop service   | `docker compose down`    |
+| Restart service   | `docker compose restart` |
+| n8n Update | `docker pull n8nio/n8n`  |
 
-## 5. Common Commands  
+---
 
-| Action          | Command                      |  
-| --------------- | ---------------------------- |  
-| Start n8n       | `docker compose up -d`       |  
-| View logs       | `docker logs n8n`            |  
-| Stop service    | `docker compose down`        |  
-| Restart service | `docker compose restart`     |  
-| Update n8n      | `docker pull n8nio/n8n`      |  
+## 6. Enable Remote Access （Optional）
 
----  
+To access n8n from other devices：
 
-## 6. Optional: Enable Remote Access  
+1. Ensure Jetson’s firewall allows TCP port `5678`.  
+2. Set the following environment variables in your Compose file or container:
 
-To access n8n remotely (e.g., from another device):  
+```env
+N8N_HOST=0.0.0.0
+N8N_PORT=5678
+WEBHOOK_TUNNEL_URL=https://yourdomain.com
+```
 
-1. Ensure the Jetson firewall allows TCP port `5678`.  
-2. Set the following variables in the Compose file or container:  
+3. For HTTPS access, it is recommended to set up a reverse proxy (e.g., Nginx + Let's Encrypt).
 
-```env  
-N8N_HOST=0.0.0.0  
-N8N_PORT=5678  
-WEBHOOK_TUNNEL_URL=https://yourdomain.com  
-```  
+---
 
-3. For HTTPS, configure a reverse proxy (e.g., Nginx + Let's Encrypt).  
+## 7. Troubleshooting
 
----  
+| Issue         | Solution                     |
+| ----------- | --------------------------- |
+| Cannot access Web UI | Check if port `5678` is open on the Jetson device      |
+| Workflows not saved     | Ensure `~/.n8n` or the mounted volume is writable        |
+| Container crashes       | Run  `docker logs n8n` to view detailed logs |
+| Require HTTPS access | Configure Nginx reverse proxy with SSL certificate         |
 
-## 7. Troubleshooting  
+---
 
-| Issue                | Solution                           |  
-| -------------------- | ---------------------------------- |  
-| Cannot access WebUI  | Check if port 5678 is open on Jetson |  
-| Workflows not saved  | Ensure `~/.n8n` or mounted volume is writable |  
-| Container crashes    | Use `docker logs n8n` for details  |  
-| HTTPS access needed  | Configure Nginx reverse proxy + SSL |  
+## 8. Appendix
 
----  
+### Default File Paths
 
-## 8. Appendix  
+| Purpose        | Path                      |
+| ----------- | ------------------------- |
+| n8n configuration/data   | `~/.n8n` or `./n8n_data/`  |
+| Docker project directory | `~/n8n`                   |
+| Web UI address  | `http://<Jetson-IP>:5678` |
 
-### Default File Paths  
+### References
 
-| Purpose           | Path                        |  
-| ----------------- | --------------------------- |  
-| n8n config & data | `~/.n8n` or `./n8n_data/`   |  
-| Docker project dir | `~/n8n`                     |  
-| WebUI access URL  | `http://<Jetson-IP>:5678`   |  
-
-### References  
-
-- [n8n Official Docs](https://docs.n8n.io)  
+- [n8n Official Documentation](https://docs.n8n.io)  
 - [Docker Hub - n8n](https://hub.docker.com/r/n8nio/n8n)  
 - [GitHub - n8n](https://github.com/n8n-io/n8n)  
-- [Jetson Developer Forum](https://forums.developer.nvidia.com)
+- [NVIDIA Jetson Developer Forum](https://forums.developer.nvidia.com)
