--- a/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/1-NeoEdge NG4500 Series/2-NG4500-CB01 Development Board/2-Software Guide/1-Driver Installation and Updates/2-4G_5G.md
@@ -1,25 +1,26 @@
 # 4G/5G
 
-This document provides usage instructions for 4G/5G modules, using Quectel's EM05 and RM520N-GL 5G as examples.
-Both modules already have drivers in the system, so no additional driver installation is required.
+This guide describes how to use 4G/5G modules on the NG4500-CB01 platform, using the Quectel EM05 (4G) and RM520N-GL (5G) as examples. Both modules are supported by pre-installed drivers in mainstream Linux systems and require no additional installation.
 
-## Serial Tool
+## Serial Port Tool
 
-You can use minicom to execute AT commands
+A serial port tool is used for AT command set. It is recommended to use `minicom`：
 
 ```
 $ sudo apt-get install minicom
 ```
 
-## EM05
+## Using the EM05 (4G) Module
 
-With the driver already installed, input `lsusb` to see the device
+**1. Identify drivers**
+
+After inserting the module, check whether it is recognized with `lsusb` ：
 
 ```
 Bus 001 Device 004: ID 2c7c:030e Quectel Wireless Solutions Co., Ltd. Quectel EM05-G
 ```
 
-Input `dmesg` to see four ttyUSB devices, where ttyUSB2 is used for AT commands
+Check the serial port nodes via（`dmesg`），Typically, four`/dev/ttyUSB*`devices will appear, with `ttyUSB2` used for AT commands:
 
 ```
 [   11.224317] usbserial: USB Serial support registered for GSM modem (1-port)
@@ -33,27 +34,31 @@ Input `dmesg` to see four ttyUSB devices, where ttyUSB2 is used for AT command
 [   11.227422] usb 1-2.3: GSM modem (1-port) converter now attached to ttyUSB3
 ```
 
-Open with minicom
+**2. AT Command Set**
+
+Open a serial terminal to send AT commands：
 
 ```
 $ sudo minicom -D /dev/ttyUSB2
 ```
 
-Use AT commands to check various information. Common commands include
+Common AT commands include：
 
 ```
-ati                     Check module model and firmware version
-at+cpin?                Check if SIM card is in place
-at+csq                  Check signal strength
-at+cops                 Check carrier operator
-at+creg?                Get registration status (0,1 indicates normal registration)
+ati              Check the module model and firmware version
+at+cpin?         Check SIM card status
+at+csq           Check whether the SIM card is present
+at+cops          Check the current operator
+at+creg?         Get network registration status (0,1 means registered)
 ```
 
-Since Ubuntu's network manager automatically configures the network, use the graphical network configuration
+**3. Connect to Network and Testing**
+
+Ubuntu’s Network Manager will automatically recognize and connect the network. You can also manually configure it through the graphical user interface, as shown in the figure below.
 
 ![EM05_network_configuration.png](/img/EM05_network_configuration.png)
 
-Check network with ifconfig
+Use the `ifconfig` command to verify network status:
 
 ```
 enx12849acd283b: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
@@ -68,7 +73,7 @@ enx12849acd283b: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 ```
 
-Test network connection with ping
+Use `ping` to verify external network connectivity：
 
 ```
 $ ping -I enx12849acd283b www.baidu.com
@@ -78,15 +83,17 @@ PING www.baidu.com(2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:2
 64 bytes from 2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:210c): icmp_seq=3 ttl=48 time=43.9 ms
 ```
 
-## RM520N-GL
+## Using the RM520N-GL (5G) Module
 
-With the driver already installed, input `lsusb` to see the device
+**1. Identify drivers**
+
+After inserting the module, check whether it is recognized with `lsusb` ：
 
 ```
 Bus 002 Device 003: ID 2c7c:0801 Quectel Wireless Solutions Co., Ltd. RM520N-GL
 ```
 
-Input `dmesg` to see four ttyUSB devices, where ttyUSB2 is used for AT commands
+Check the serial port nodes via（`dmesg`），Typically, four  `/dev/ttyUSB*`devices will appear, with `ttyUSB2` used for AT command:
 
 ```
 [    9.209315] option 2-1.3:1.0: GSM modem (1-port) converter detected
@@ -99,25 +106,29 @@ Input `dmesg` to see four ttyUSB devices, where ttyUSB2 is used for AT command
 [    9.215450] usb 2-1.3: GSM modem (1-port) converter now attached to ttyUSB3
 ```
 
-Open with minicom
+**2. AT Command set**
+
+Open the serial terminal:：
 
 ```
 $ sudo minicom -D /dev/ttyUSB2
 ```
 
-Use AT commands to check various information. Common commands include
+After entering Minicom, press `Ctrl+A`, then `E` to enable or disable echo. If `OK` is returned after entering `AT`, the module is functioning correctly. Proceed with debugging using the following commands.
+
+Common AT commands：
 
 ```
-ATI                      Check module information
-AT+CPIN?                 Check SIM card status
-AT+C5GREG?               Check carrier registration status (should return 0,1 or 0,5)
-AT+QENG="servingcell"    Check carrier information
-AT+CGPADDR=1             Check if the first PDP has an IP address
-AT+CGACT=1,1             Activate the first PDP if no IP address
-AT+QCFG="usbnet"         Check network card configuration mode
+ATI                         Check module information
+AT+CPIN?                    Check SIM card status
+AT+C5GREG?                  Check 5G network registration status (should return 0,1 or 0,5)
+AT+QENG="servingcell"       Check operator information
+AT+CGPADDR=1                Check if the first PDP context has an IP address
+AT+CGACT=1,1                Activate the first PDP context if no IP is assigned
+AT+QCFG="usbnet"            Query USB network mode
 ```
 
-Example execution results
+Sample output：
 
 ```
 Welcome to minicom 2.8
@@ -155,31 +166,44 @@ OK
 OK
 ```
 
-For Linux systems, if the network card configuration mode is not ECM mode, change it to ECM mode. Mode definition
+After verification, press `Ctrl+A` followed by `X`, then select `Yes` to exit.
+
+**3. Enable 5G module to connect to the network(Recommended: ECM)**
+
+Enter the AT command to query the current network status：
 
 ```
-AT+QCFG="usbnet",0 驱动类型为 NDIS(QMI))；
-AT+QCFG="usbnet",1 驱动类型为 ECM；（Linux系统推荐用）
-AT+QCFG="usbnet",2 驱动类型为 MBIM；（Windows系统推荐用，Linux暂不支持）
-AT+QCFG="usbnet",5 驱动类型为 NCM；（暂不支持）
+AT+QCFG="usbnet"
 ```
 
-Use commands for network configuration
+Type the following commands to set the module to ECM mode (highly recommended for Linux)：
 
 ```
 AT+QCFG="usbnet",1 
 AT+CFUN=1,1
 ```
 
-After restarting, `dmesg` shows the ECM device being registered
+Definitions：
+
+| Command                | Description       |
+| ------------------ | --------- |
+| AT+QCFG="usbnet",0 | NDIS(QMI) |
+| AT+QCFG="usbnet",1 | ECM（recommended）   |
+| AT+QCFG="usbnet",2 | MBIM      |
+| AT+QCFG="usbnet",5 | NCM       |
+
+**4. Checking and Testing**
+
+After restarting the module, ECM registration can be observed in`dmesg` ：
 
 ```
 [    9.206605] cdc_ether 2-1.3:1.10 usb0: register 'cdc_ether' at usb-3610000.usb-1.3, CDC Ethernet Device, 7a:a8:fd:a4:36:d1
 ```
 
-Check network with ifconfig (IP is automatically assigned)
+Use the `ifconfig` command to verify network interfaces：
 
 ```
+$ sudo ifconfig 
 enx7aa8fda436d1: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         inet 192.168.225.94  netmask 255.255.255.0  broadcast 192.168.225.255
         inet6 2409:8934:20c2:fbe7:bc33:5fcd:fd07:f46b  prefixlen 64  scopeid 0x0<global>
@@ -192,7 +216,7 @@ enx7aa8fda436d1: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 ```
 
-Test network connection with ping
+Use ` ping`  to verify external network connectivity:
 
 ```
 $ ping -I enx7aa8fda436d1 www.baidu.com
@@ -202,4 +226,6 @@ PING www.baidu.com(2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:2
 64 bytes from 2409:8c20:6:1135:0:ff:b027:210c (2409:8c20:6:1135:0:ff:b027:210c): icmp_seq=3 ttl=47 time=107 ms
 ```
 
-With normal connection, the 5G module can be used properly.
+---
+
+For other brands or models of 4G/5G modules, refer to the corresponding vendor documentation and official driver instructions
